--- a/MyScript.cs.config
+++ b/MyScript.cs.config
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <ScriptSettings>
   <AssemblyReference resolver="local">DLLExample\MathLibrary.DLL</AssemblyReference>
+  <AssemblyReference resolver="local">..\Application Extensions\Common.DLL</AssemblyReference>
   <CompilerOptions>-debug -D:DEBUG</CompilerOptions>
 </ScriptSettings>
