--- a/MyScript.cs.config
+++ b/MyScript.cs.config
@@ -2,5 +2,6 @@
 <ScriptSettings>
   <AssemblyReference resolver="local">DLLExample\MathLibrary.DLL</AssemblyReference>
   <AssemblyReference resolver="local">..\Application Extensions\Common.DLL</AssemblyReference>
+  <AssemblyReference resolver="local">..\Application Extensions\Video.DLL</AssemblyReference>
   <CompilerOptions>-debug -D:DEBUG</CompilerOptions>
 </ScriptSettings>
