--- a/MyScript.cs.config
+++ b/MyScript.cs.config
@@ -3,5 +3,6 @@
   <AssemblyReference resolver="local">DLLExample\MathLibrary.DLL</AssemblyReference>
   <AssemblyReference resolver="local">..\Application Extensions\Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">..\Application Extensions\Video.DLL</AssemblyReference>
+  <AssemblyReference resolver="local">..\Application Extensions\Audio.DLL</AssemblyReference>
   <CompilerOptions>-debug -D:DEBUG</CompilerOptions>
 </ScriptSettings>
