a rough conversion of AddRuler from an app ext to a script
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@48 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/AddRuler.cs.config
+++ b/Script Menu/AddRuler.cs.config
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <ScriptSettings>
   <IconFile>AddRuler.cs.png</IconFile>
+  <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
+  <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
+  <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
 </ScriptSettings>
