--- a/Script Menu/TrackOutline.cs.config
+++ b/Script Menu/TrackOutline.cs.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <ScriptSettings>
-  <IconFile>2M.cs.png</IconFile>
+  <IconFile>TrackOutline.cs.png</IconFile>
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
