--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -1,7 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <ScriptSettings>
   <IconFile>AddObject.cs.png</IconFile>
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
+  <ProjectPath>
+  </ProjectPath>
+  <Filename>
+  </Filename>
+  <Notes>
+  </Notes>
+  <Tempo>
+  </Tempo>
+  <Rate>
+  </Rate>
+  <Measure>
+  </Measure>
 </ScriptSettings>
