Finished Rulers2Objects.cs; extracted getNextFilename() to common.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@285 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,16 +4,10 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>
-  </ProjectPath>
-  <Filename>
-  </Filename>
-  <Notes>
-  </Notes>
-  <Tempo>
-  </Tempo>
-  <Rate>
-  </Rate>
-  <Measure>
-  </Measure>
+  <ProjectPath>D:\Temp\New folder (5)</ProjectPath>
+  <Filename>Yngwie REH</Filename>
+  <Notes>Ex 1</Notes>
+  <Tempo>120.0000 BPM</Tempo>
+  <Rate>100%</Rate>
+  <Measure>3</Measure>
 </ScriptSettings>
