--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,10 +4,11 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Temp\New folder (5)</ProjectPath>
-  <Filename>Yngwie REH</Filename>
-  <Notes>Ex 1</Notes>
-  <Tempo>120.0000 BPM</Tempo>
-  <Rate>100%</Rate>
-  <Measure>3</Measure>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\01 - Example 1 (E diminished arpeggio)\src\HUD</ProjectPath>
+  <Filename>01 - Example 1 (E diminished arpeggio)</Filename>
+  <Notes>Take1</Notes>
+  <Tempo>115.9874 BPM</Tempo>
+  <Rate>75%</Rate>
+  <Measure>
+  </Measure>
 </ScriptSettings>
