Pre revert to backup copy.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@291 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,11 +4,14 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\01 - Example 1 (E diminished arpeggio)\src\HUD</ProjectPath>
-  <Filename>01 - Example 1 (E diminished arpeggio)</Filename>
-  <Notes>Take1</Notes>
-  <Tempo>115.9874 BPM</Tempo>
-  <Rate>75%</Rate>
-  <Measure>
-  </Measure>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\01 - Example 1 (E diminished arpeggio)\src\Take4.Normalized.HUD</ProjectPath>
+  <Filename>
+  </Filename>
+  <Notes>
+  </Notes>
+  <Tempo>
+  </Tempo>
+  <Rate>
+  </Rate>
+  <Measure>0</Measure>
 </ScriptSettings>
