RenderAll.cs: added GUI and xml config file support; moved MyTextBox class to common.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@300 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/RenderAll.cs.config
+++ b/Script Menu/RenderAll.cs.config
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <ScriptSettings>
   <IconFile>RenderAll.cs.png</IconFile>
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
+  <RenderTemplate>720x480 UNCOMPRESSED</RenderTemplate>
+  <OutputPath>D:\Temp\New folder</OutputPath>
 </ScriptSettings>
