Script finished; added full tracks rendering; added renderer text box; added Render() method.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@302 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/RenderAll.cs.config
+++ b/Script Menu/RenderAll.cs.config
@@ -4,6 +4,7 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
+  <Renderer>Video for Windows</Renderer>
   <RenderTemplate>720x480 UNCOMPRESSED</RenderTemplate>
   <OutputPath>D:\Temp\New folder</OutputPath>
 </ScriptSettings>
