Stripped down vertical navigation according to the new project layout; extracted getTrackIndex() to common.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@310 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -5,13 +5,10 @@
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
   <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\01 - Example 1 (E diminished arpeggio)\HUD</ProjectPath>
-  <Filename>
-  </Filename>
-  <Notes>
-  </Notes>
-  <Tempo>
-  </Tempo>
-  <Rate>
-  </Rate>
-  <Measure>0</Measure>
+  <Filename>01 - Example 1 (E diminished arpeggio)</Filename>
+  <Notes>Take4R</Notes>
+  <Tempo>29.7042 BPM</Tempo>
+  <Rate>25%</Rate>
+  <Measure>
+  </Measure>
 </ScriptSettings>
