--- a/Script Menu/RenderAll.cs.config
+++ b/Script Menu/RenderAll.cs.config
@@ -4,7 +4,7 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <Renderer>Video for Windows</Renderer>
-  <RenderTemplate>720x480 UNCOMPRESSED</RenderTemplate>
-  <OutputPath>D:\Temp\New folder</OutputPath>
+  <Renderer>MainConcept AVC/AAC</Renderer>
+  <RenderTemplate>720x480 FINAL</RenderTemplate>
+  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\01 - Example 1 (E diminished arpeggio)\720x480\Tracks</OutputPath>
 </ScriptSettings>
