Added TC GUI; extracted getRange() to common.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@313 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/RenderAll.cs.config
+++ b/Script Menu/RenderAll.cs.config
@@ -4,7 +4,7 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <Renderer>MainConcept AVC/AAC</Renderer>
+  <Renderer>Sony AVC/MVC</Renderer>
   <RenderTemplate>720x480 FINAL</RenderTemplate>
-  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\01 - Example 1 (E diminished arpeggio)\720x480\Tracks</OutputPath>
+  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\01 - Example 1 (E diminished arpeggio)\720x480\Regions</OutputPath>
 </ScriptSettings>
