--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,11 +4,14 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\01 - Example 1 (E diminished arpeggio)\HUD</ProjectPath>
-  <Filename>01 - Example 1 (E diminished arpeggio)</Filename>
-  <Notes>Take4R</Notes>
-  <Tempo>29.7042 BPM</Tempo>
-  <Rate>25%</Rate>
+  <ProjectPath>C:\Temp\New folder\HUD</ProjectPath>
+  <Filename>
+  </Filename>
+  <Notes>
+  </Notes>
+  <Tempo>
+  </Tempo>
+  <Rate>6.25%</Rate>
   <Measure>
   </Measure>
 </ScriptSettings>
