--- a/Script Menu/RenderAll.cs.config
+++ b/Script Menu/RenderAll.cs.config
@@ -6,5 +6,5 @@
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
   <Renderer>Sony AVC/MVC</Renderer>
   <RenderTemplate>720x480 FINAL</RenderTemplate>
-  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\01 - Example 1 (E diminished arpeggio)\720x480\Regions</OutputPath>
+  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\02 - Example 2 (A minor arpeggio)\Tracks</OutputPath>
 </ScriptSettings>
