Completed "02 - Example 2 (A minor arpeggio)" project.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@391 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,14 +4,11 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>C:\Temp\New folder\HUD</ProjectPath>
-  <Filename>
-  </Filename>
-  <Notes>
-  </Notes>
-  <Tempo>
-  </Tempo>
-  <Rate>6.25%</Rate>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\02 - Example 2 (A minor arpeggio)\HUD</ProjectPath>
+  <Filename>02 - Example 2 (A minor arpeggio)</Filename>
+  <Notes>Take4R</Notes>
+  <Tempo>112.3876 BPM</Tempo>
+  <Rate>100%</Rate>
   <Measure>
   </Measure>
 </ScriptSettings>
