--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,9 +4,9 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\02 - Example 2 (A minor arpeggio)\HUD</ProjectPath>
-  <Filename>02 - Example 2 (A minor arpeggio)</Filename>
-  <Notes>Take4R</Notes>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\03 - Example 3 (A minor arpeggios)\HUD</ProjectPath>
+  <Filename>03 - Example 3 (A minor arpeggios)</Filename>
+  <Notes>Take3R</Notes>
   <Tempo>112.3876 BPM</Tempo>
   <Rate>100%</Rate>
   <Measure>
