--- a/Script Menu/RenderAll.cs.config
+++ b/Script Menu/RenderAll.cs.config
@@ -6,5 +6,5 @@
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
   <Renderer>Sony AVC/MVC</Renderer>
   <RenderTemplate>720x480 FINAL</RenderTemplate>
-  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\03 - Example 3 (A minor arpeggios)\Temp</OutputPath>
+  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\04 - Example 4\Tracks</OutputPath>
 </ScriptSettings>
