Updated docs; added a screen shot with a bug.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@396 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,11 +4,11 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\04 - Example 4\HUD</ProjectPath>
-  <Filename>04 - Example 4</Filename>
-  <Notes>Take2R</Notes>
-  <Tempo>51.3772 BPM</Tempo>
-  <Rate>25%</Rate>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\03 - Example 3 (A minor arpeggios)\HUD</ProjectPath>
+  <Filename>03 - Example 3 (A minor arpeggios)</Filename>
+  <Notes>Take2L</Notes>
+  <Tempo>59.9401 BPM</Tempo>
+  <Rate>6.25%</Rate>
   <Measure>
   </Measure>
 </ScriptSettings>
