--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,11 +4,14 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\03 - Example 3 (A minor arpeggios)\HUD</ProjectPath>
-  <Filename>03 - Example 3 (A minor arpeggios)</Filename>
-  <Notes>Take2L</Notes>
-  <Tempo>59.9401 BPM</Tempo>
-  <Rate>6.25%</Rate>
-  <Measure>
-  </Measure>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\06 - Example 6 (Echo Lick notated with echo effect)\HUD</ProjectPath>
+  <Filename>
+  </Filename>
+  <Notes>
+  </Notes>
+  <Tempo>
+  </Tempo>
+  <Rate>
+  </Rate>
+  <Measure>0</Measure>
 </ScriptSettings>
