--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,14 +4,11 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\06 - Example 6 (Echo Lick notated with echo effect)\HUD</ProjectPath>
-  <Filename>
-  </Filename>
-  <Notes>
-  </Notes>
-  <Tempo>
-  </Tempo>
-  <Rate>
-  </Rate>
-  <Measure>0</Measure>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\09 - Example 8\HUD</ProjectPath>
+  <Filename>09 - Example 8</Filename>
+  <Notes>Take3L</Notes>
+  <Tempo>138.3232 BPM</Tempo>
+  <Rate>6.25%</Rate>
+  <Measure>
+  </Measure>
 </ScriptSettings>
