--- a/Script Menu/RenderAll.cs.config
+++ b/Script Menu/RenderAll.cs.config
@@ -6,5 +6,5 @@
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
   <Renderer>Sony AVC/MVC</Renderer>
   <RenderTemplate>720x480 FINAL</RenderTemplate>
-  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\06 - Example 6 (Echo Lick notated with echo effect)\Tracks</OutputPath>
+  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\09 - Example 8\Tracks</OutputPath>
 </ScriptSettings>
