Added to my guitar rig todo list.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@404 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,14 +4,11 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\11 - Example 10 (C harmonic minor)\HUD</ProjectPath>
-  <Filename>
-  </Filename>
-  <Notes>
-  </Notes>
-  <Tempo>
-  </Tempo>
-  <Rate>
-  </Rate>
-  <Measure>3</Measure>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\01 - Licks, Arpeggios and Classical Phrases\12 - Example 11\HUD</ProjectPath>
+  <Filename>12 - Example 11</Filename>
+  <Notes>Take3R</Notes>
+  <Tempo>81.7365 BPM</Tempo>
+  <Rate>6.25%</Rate>
+  <Measure>
+  </Measure>
 </ScriptSettings>
