Updated docs slightly.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@412 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,10 +4,10 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\02 - Segments from Compositions\01 - Example 13 Demon Driver\HUD</ProjectPath>
-  <Filename>01 - Example 13 Demon Driver</Filename>
-  <Notes>R 7.3 Vrs4 + end</Notes>
-  <Tempo>137.3517 BPM</Tempo>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\02 - Segments from Compositions\02 - Example 14 Rising Force\HUD</ProjectPath>
+  <Filename>02 - Example 14 Rising Force</Filename>
+  <Notes>Take2R</Notes>
+  <Tempo>128.4430 BPM</Tempo>
   <Rate>6.25%</Rate>
   <Measure>
   </Measure>
