--- a/Script Menu/RenderAll.cs.config
+++ b/Script Menu/RenderAll.cs.config
@@ -6,5 +6,5 @@
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
   <Renderer>Sony AVC/MVC</Renderer>
   <RenderTemplate>720x480 FINAL</RenderTemplate>
-  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\02 - Segments from Compositions\01 - Example 13 Demon Driver\Tracks</OutputPath>
+  <OutputPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\02 - Segments from Compositions\02 - Example 14 Rising Force\Tracks</OutputPath>
 </ScriptSettings>
