Added a bug report to the doc; minor additions to the work flow.
git-svn-id: file:///cygdrive/c/tmp/nf1/Script_Menu_repo@414 59b06cf8-461b-aa4c-9181-dd8d1ffaba95

--- a/Script Menu/AddObject.cs.config
+++ b/Script Menu/AddObject.cs.config
@@ -4,10 +4,10 @@
   <AssemblyReference resolver="local">Common.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Audio.DLL</AssemblyReference>
   <AssemblyReference resolver="local">Video.DLL</AssemblyReference>
-  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\02 - Segments from Compositions\02 - Example 14 Rising Force\HUD</ProjectPath>
-  <Filename>02 - Example 14 Rising Force</Filename>
-  <Notes>Take2R</Notes>
-  <Tempo>128.4430 BPM</Tempo>
+  <ProjectPath>D:\Aussie\My_Music\Yngwie Malmsteen - REH Video\02 - Segments from Compositions\03 - Example 15 Trilogy Suite (B harmonic minor)\HUD</ProjectPath>
+  <Filename>03 - Example 15 Trilogy Suite (B harmonic min</Filename>
+  <Notes>R Chorus2</Notes>
+  <Tempo>123.4586 BPM</Tempo>
   <Rate>6.25%</Rate>
   <Measure>
   </Measure>
